Fixed header spacing

--- a/index.css
+++ b/index.css
@@ -12,7 +12,6 @@ body{
 }
  h1{
     text-align: center;
-    margin-right: 100px;
     text-decoration: underline;
     
  }
